--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@ function insert() {
     let img0=document.createElement("img");
     let span = document.createElement("span");
     let hr=document.createElement("hr");
-    img.src='delete0.png';
+    img.src='./Work/delete0.png';
     img.style.float='right';
-    img0.src="edit0.webp";
+    img0.src="./Work/edit0.webp";
     img0.style.float='right';
     span.innerHTML=i.value;
     span.className="text";
